--- a/joomla/charts/mariadb/templates/deployment.yaml
+++ b/joomla/charts/mariadb/templates/deployment.yaml
@@ -53,8 +53,8 @@ spec:
           initialDelaySeconds: 5
           timeoutSeconds: 1
         volumeMounts:
-        - name: data
+        - name: mariadb-data
           mountPath: /bitnami/mariadb
       volumes:
-      - name: data
+      - name: mariadb-data
         emptyDir: {}
