--- a/joomla/values.yaml
+++ b/joomla/values.yaml
@@ -1,7 +1,7 @@
 ## Bitnami Joomla image version
 ## ref: https://hub.docker.com/r/bitnami/joomla/tags/
 ##
-imageTag: 3.6.0-r1
+imageTag: 3.6.2-r0
 
 ## Specify a imagePullPolicy
 ## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
@@ -9,13 +9,17 @@ imageTag: 3.6.0-r1
 ##
 # imagePullPolicy:
 
-## Admin user credentials
+## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-joomla#environment-variables
 ##
 # joomlaUser: user
+
+## Application password
+## ref: https://github.com/bitnami/bitnami-docker-joomla#environment-variables
+##
 # joomlaPassword: bitnami
 
-## Admin user email
+## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-joomla#environment-variables
 ##
 # joomlaEmail: user@example.com
@@ -27,13 +31,13 @@ imageTag: 3.6.0-r1
 # smtpPort:
 # smtpUser:
 # smtpPassword:
-# smtpProtocol:
+# smtpProtocol: tls
 
 ##
 ## MariaDB chart configuration
 ##
 # mariadb:
-  ## Specify password for root user
+  ## MariaDB admin password
   ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
   ##
   # mariadbRootPassword:
