--- a/redmine/values.yaml
+++ b/redmine/values.yaml
@@ -1,7 +1,7 @@
 ## Bitnami Redmine image version
 ## ref: https://hub.docker.com/r/bitnami/redmine/tags/
 ##
-imageTag: 3.3.0-r0
+imageTag: 3.3.0-r1
 
 ## Specify a imagePullPolicy
 ## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
@@ -9,18 +9,22 @@ imageTag: 3.3.0-r0
 ##
 # imagePullPolicy:
 
-## Admin user credentials
+## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
 ##
 # redmineUser: user
+
+## Application password
+## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
+##
 # redminePassword: bitnami
 
-## Admin user email
+## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
 ##
 # redmineEmail: user@example.com
 
-## Default UI language
+## Redmine default data language
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
 ##
 # redmineLanguage: en
@@ -32,13 +36,13 @@ imageTag: 3.3.0-r0
 # smtpPort:
 # smtpUser:
 # smtpPassword:
-# smtpTls: true
+# smtpTls:
 
 ##
 ## MariaDB chart configuration
 ##
 # mariadb:
-  ## Specify password for root user
+  ## MariaDB admin password
   ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
   ##
   # mariadbRootPassword:
