--- a/wildfly/templates/deployment.yaml
+++ b/wildfly/templates/deployment.yaml
@@ -47,8 +47,8 @@ spec:
           initialDelaySeconds: 5
           timeoutSeconds: 1
         volumeMounts:
-        - name: data
+        - name: wildfly-data
           mountPath: /bitnami/wildfly
       volumes:
-      - name: data
+      - name: wildfly-data
         emptyDir: {}
