--- a/apache/values.yaml
+++ b/apache/values.yaml
@@ -7,4 +7,4 @@ imageTag: 2.4.23-r1
 ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
-# imagePullPolicy:
+imagePullPolicy: Always
