--- a/jenkins/templates/deployment.yaml
+++ b/jenkins/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: {{ template "fullname" . }}
         image: "bitnami/jenkins:{{ .Values.imageTag }}"
-        imagePullPolicy: {{ template "imagePullPolicy" . }}
+        imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
         - name: JENKINS_USERNAME
           value: {{ default "" .Values.jenkinsUser | quote }}
