--- a/mariadb-cluster/templates/deployment-slave.yaml
+++ b/mariadb-cluster/templates/deployment-slave.yaml
@@ -22,7 +22,7 @@ spec:
       containers:
       - name: {{ template "slave.fullname" . }}
         image: "bitnami/mariadb:{{ .Values.imageTag }}"
-        imagePullPolicy: {{ template "imagePullPolicy" . }}
+        imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
         - name: MARIADB_ROOT_PASSWORD
           valueFrom:
