--- a/mongodb/templates/deployment.yaml
+++ b/mongodb/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: {{ template "fullname" . }}
         image: "bitnami/mongodb:{{ .Values.imageTag }}"
-        imagePullPolicy: {{ template "imagePullPolicy" . }}
+        imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
         - name: MONGODB_ROOT_PASSWORD
           valueFrom:
