--- a/odoo/charts/postgresql/templates/deployment.yaml
+++ b/odoo/charts/postgresql/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: {{ template "fullname" . }}
         image: "bitnami/postgresql:{{ .Values.imageTag }}"
-        imagePullPolicy: {{ template "imagePullPolicy" . }}
+        imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
         - name: POSTGRES_USER
           value: {{ default "" .Values.postgresUser | quote }}
