--- a/redis/templates/deployment.yaml
+++ b/redis/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: {{ template "fullname" . }}
         image: "bitnami/redis:{{ .Values.imageTag }}"
-        imagePullPolicy: {{ template "imagePullPolicy" . }}
+        imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
         - name: REDIS_PASSWORD
           valueFrom:
