--- a/wildfly/templates/deployment.yaml
+++ b/wildfly/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: {{ template "fullname" . }}
         image: "bitnami/wildfly:{{ .Values.imageTag }}"
-        imagePullPolicy: {{ template "imagePullPolicy" . }}
+        imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
         - name: WILDFLY_USER
           value: {{ default "" .Values.wildflyUser | quote }}
