--- a/ghost/values.yaml
+++ b/ghost/values.yaml
@@ -17,7 +17,7 @@ imageTag: 0.10.0-r0
 ## Ghost port to create application URLs along with host.
 ## ref: https://github.com/bitnami/bitnami-docker-ghost#configuration
 ##
-# ghostPort: 80
+ghostPort: 80
 
 ## loadBalancerIP for the Ghost Service (optional, cloud specific)
 ## ref: http://kubernetes.io/docs/user-guide/services/#type-loadbalancer
@@ -27,22 +27,22 @@ imageTag: 0.10.0-r0
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-ghost#configuration
 ##
-# ghostUser: user
+ghostUser: user
 
 ## Application password
 ## ref: https://github.com/bitnami/bitnami-docker-ghost#configuration
 ##
-# ghostPassword: bitnami1
+ghostPassword: bitnami1
 
 ## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-ghost#configuration
 ##
-# ghostEmail: user@example.com
+ghostEmail: user@example.com
 
 ## Ghost Blog name
 ## ref: https://github.com/bitnami/bitnami-docker-ghost#environment-variables
 ##
-# blogTitle: User's Blog
+blogTitle: User's Blog
 
 ## SMTP mail delivery configuration
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#smtp-configuration
