--- a/redmine/values.yaml
+++ b/redmine/values.yaml
@@ -12,22 +12,22 @@ imageTag: 3.3.0-r2
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
 ##
-# redmineUser: user
+redmineUser: user
 
 ## Application password
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
 ##
-# redminePassword: bitnami
+redminePassword: bitnami
 
 ## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
 ##
-# redmineEmail: user@example.com
+redmineEmail: user@example.com
 
 ## Redmine default data language
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#environment-variables
 ##
-# redmineLanguage: en
+redmineLanguage: en
 
 ## SMTP mail delivery configuration
 ## ref: https://github.com/bitnami/bitnami-docker-redmine/#smtp-configuration
